plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
	id 'com.gradleup.shadow' version '9.4.0'
}

base {
	archivesName = project.archives_base_name
}

sourceSets {
	main {
		java {
			srcDirs = ['/java']
		}
		resources {
			srcDirs = ['/resources']
		}
	}
}

group = project.maven_group
version = "mc" + project.minecraft_version + "-" + project.mod_version
def semver_version = project.mod_version + "+mc" + project.minecraft_version

repositories {
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.terraformersmc.com/" }
	maven { url "https://maven.blamejared.com/" }
	maven { url "https://modmaven.dev" }
	maven { url "https://cursemaven.com" }
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Mod Menu(mod)
	implementation "com.terraformersmc:modmenu:${project.mod_menu_version}"

	// Cloth Config API
	compileOnly ("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_api_version}") {
		exclude(group: "net.fabricmc.fabric-api")
	}

	// Configured
	compileOnly "curse.maven:configured-457570:7820635"

	// Jankson: parsing files
	implementation (shadow "blue.endless:jankson:1.2.3")

	// REI
	// compileOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"

	// JEI, code is in progress for 26.1 in Github!
	// compileOnly "mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}"

	// AppleSkin API
	// compileOnly("squeek.appleskin:appleskin-fabric:${project.minecraft_version}:api") {
	//     transitive = false
	// }
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": semver_version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

tasks.register('apiJar', Jar) {
	dependsOn classes
	archiveClassifier.set 'api'

	from sourceSets.main.output
	include "squeek/appleskin/api/**"
}

shadowJar {
	relocate "blue.endless.jankson", "${project.maven_group}.shadowed.blue.endless.jankson"
	configurations = [project.configurations.shadow]
	archiveClassifier = "shadow"

	destinationDirectory = layout.buildDirectory.dir('shadowlibs')
}

jar {
	inputs.file(shadowJar.archiveFile)
	dependsOn(shadowJar)

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

artifacts {
	archives sourcesJar
	archives apiJar
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			groupId = group
			artifactId = project.archives_base_name

			artifact(jar)
			artifact(apiJar)
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		maven {
			url "https://maven.ryanliptak.com/"
		}
	}
}